# mylessons

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  How_install_git.md  README.md  anim  anim.cpp  fast_start_code  fast_start_code.cpp  fstc  fstc.cpp  getmonth  getmonth.cpp  linux_cheat_sheet  linux_cheat_sheet.cpp  neuralnetwork  neuralnetwork.c  neuralnetwork.cpp  ping_pong_bot  ping_pong_bot.cpp  test_joy_car.cpp
.github/: dependabot.yml  typos.toml
.github/workflows/: Lint.yml  clang-format-check.yml  clang-format.yml  greetings.yml  (+3 more)
bc_car/: .gitignore  CAR_PRO_QT.pro  CAR_QT.pro  Makefile  assets.h  car_joy.cpp  config_menu.cpp  config_menu.h  main.cpp  mainwindow.ui
bt_car/: .gitignore  bt_car.drawio  project.yml
classwork/: class_test.cpp  free_mem.c  getmonth.cpp  t.cpp  test_struct.cpp
p2/: .linux_cheat_sheet.cpp.swo
p2/ex/: 1  (+19 more)
ping_pong/: Makefile  Socket.h  assets.cpp  assets.h  bot.cpp  bot.h  draw.cpp  draw.h  http.cpp  http.h  inputs.h  keyInp.cpp  keyInp.h  ping_pong.cpp  serial_std.cpp  serial_std.h
ping_pong/esp/main/: CMakeLists.txt  Kconfig.projbuild  gpio.c  gpio.h  main.c  pages.h  server.c  server.h  wifi.c  wifi.h
ping_pong/esp/main/api/: v1.c  v1.h
ping_pong_bot/: Makefile  ping_pong_bot  ping_pong_bot.cpp
ping_pong_pl1/: Makefile  ping_pong_pl1  ping_pong_pl1.cpp
ping_pong_pl2/: Makefile  assets.h  ping_pong_pl2  ping_pong_pl2.bak.cpp  ping_pong_pl2.cpp_myBak
saves/: keyboard_ping_pong_sqr.cpp  ping_pong_bot2.cpp  ping_pong_bot3.cpp
scripts/: anim.cpp  fstc.cpp  neuralnetwork.c  neuralnetwork.cpp  tabsToSpaces.py
(+423 files in other folders)
